--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,20 +1,10 @@
 ---
-layout: home
+layout: archive
 ---
 
 {{ content }}
 
----
-
-### News
-
----
-
-### Publications
-
----
-
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "最近文章" }}</h3>
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% if paginator %}
   {% assign posts = paginator.posts %}
